--- a/app/views/admins/registrations/edit.html.erb
+++ b/app/views/admins/registrations/edit.html.erb
@@ -37,6 +37,16 @@
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "field" %>
     </div>
 
+    <div class="img-upload">
+      <div class="text">
+        プロフィール画像変更
+      </div>
+      <div class="click-upload">
+          クリックしてファイルをアップロード
+        <%= f.file_field :image, id:"image" %>
+      </div>
+    </div>
+
     <div class="form">
       <div class="label">
         <%= f.label :current_password %><span class="indispensable">必須</span>
