--- a/app/views/shared/_top_info.html.erb
+++ b/app/views/shared/_top_info.html.erb
@@ -2,7 +2,11 @@
   <div class="top">
     <div class="name"><%= "#{current_admin.name} 様"%></div>
     <div class="info">
-      <%= image_tag "img_noimage.png", class: "image" %>
+      <% if current_admin.image.attached? %>
+        <%= image_tag current_admin.image, class: "image" %>
+      <% else %>
+        <%= image_tag "img_noimage.png", class: "image" %>
+      <% end %>
       <div class="text">
         <div class="name">
           <%= "#{current_admin.name} 様"%>
@@ -19,7 +23,11 @@
   <div class="top">
     <div class="name"><%= "#{current_user.admin.name} "%></div>
     <div class="info">
-      <%= image_tag "img_noimage.png", class: "image" %>
+      <% if current_user.image.attached? %>
+        <%= image_tag current_user.image, class: "image" %>
+      <% else %>
+        <%= image_tag "img_noimage.png", class: "image" %>
+      <% end%>
       <div class="text">
         <div class="name">
           <%= "#{current_user.name} 様"%>
