--- a/app/assets/stylesheets/user/top.css
+++ b/app/assets/stylesheets/user/top.css
@@ -1,6 +1,7 @@
 .client_list {
   height: calc(70vh - 50px);
   min-height: 400px;
+  width: 100vw;
   min-width: 700px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -92,5 +93,42 @@
   width: 30%;
   text-align: center;
   font-size: 18px;
+}
+
+.client_list .search_box {
+  width: 60%;
+}
+
+.client_list .search_box .search_form {
+  height: 50px;
+  margin: 10px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.client_list .search_box .search_form .search_input {
+  display: block;
+  width: 70%;
+  height: 40px;
+}
+
+.client_list .search_box .search_form .search_btn {
+  display: block;
+  height: 40px;
+  width: 25%;
+  min-width: 70px;
+  background-color: white;
+  color: #0099CC;
+  font-size: 20px;
+  font-weight: 600;
+  border: 4px solid #0099CC;
+  border-radius: 20px;
 }
 /*# sourceMappingURL=top.css.map */
