--- a/app/assets/stylesheets/user/top.scss
+++ b/app/assets/stylesheets/user/top.scss
@@ -3,6 +3,7 @@ $cBlue: #0099CC;
 .client_list {
   height: calc(70vh - 50px);
   min-height: 400px;
+  width: 100vw;
   min-width: 700px;
   display: flex;
   align-items: center;
@@ -71,4 +72,35 @@ $cBlue: #0099CC;
       }
     }
   }
+
+  & .search_box {
+    width: 60%;
+    & .search_form {
+      height: 50px;
+      margin: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  
+      & .search_input {
+        display: block;
+        width: 70%;
+        height: 40px;
+      }
+  
+      & .search_btn {
+        display: block;
+        height: 40px;
+        width: 25%;
+        min-width: 70px;
+        background-color: white;
+        color: $cBlue;
+        font-size: 20px;
+        font-weight: 600;
+        border: 4px solid $cBlue;
+        border-radius: 20px;
+      }
+    }
+  }
+  
 }
