--- a/app/assets/stylesheets/visit/top.scss
+++ b/app/assets/stylesheets/visit/top.scss
@@ -28,6 +28,9 @@ $cOrange: orange;
         }
       }
       
+      & .text.content {
+        text-align: left;
+      }
       & .link {
         width: 100px;
         text-align: center;
