--- a/app/assets/stylesheets/client/show.css
+++ b/app/assets/stylesheets/client/show.css
@@ -21,6 +21,7 @@
   font-size: 20px;
   font-weight: 600;
   width: 40%;
+  min-width: 200px;
   height: 40px;
   margin: 10px auto 20px;
   border: 4px solid #0099CC;
@@ -46,6 +47,7 @@
 
 .client_show .show_box .list_box .record .list {
   width: 55%;
+  height: 100%;
   font-size: 20px;
   border-right: 1px dotted gray;
   display: -webkit-box;
@@ -56,7 +58,14 @@
           justify-content: space-between;
 }
 
+.client_show .show_box .list_box .record .list .title {
+  height: 100%;
+  width: calc(100% - 80px);
+  overflow-x: scroll;
+}
+
 .client_show .show_box .list_box .record .list .link {
+  min-width: 80px;
   display: block;
   text-decoration: none;
   background-color: #0099CC;
