--- a/app/assets/stylesheets/client/show.scss
+++ b/app/assets/stylesheets/client/show.scss
@@ -18,6 +18,7 @@ $cOrange: orange;
       font-size: 20px;
       font-weight: 600;
       width: 40%;
+      min-width: 200px;
       height: 40px;
       margin: 10px auto 20px;
       border: 4px solid $cBlue;
@@ -37,12 +38,20 @@ $cOrange: orange;
 
         & .list {
           width: 55%;
+          height: 100%;
           font-size: 20px;
           border-right: 1px dotted gray;
           display: flex;
           justify-content: space-between;
 
+          & .title {
+            height: 100%;
+            width: calc(100% - 80px);
+            overflow-x: scroll;
+          }
+
           & .link {
+            min-width: 80px;
             display: block;
             text-decoration: none;
             background-color: $cBlue;
